amelioration du css

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,1 +1,14 @@
 @import "home";
+
+
+.card {
+  padding-top: 20px;
+}
+
+.show {
+  paddint-top: 50px;
+}
+
+.bg-white {
+  background-color: white;
+}
