--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <% @cocktails.each do |cocktail| %>
-        <div class="card bg-white">
+        <div class="card">
           <h3> <%= link_to cocktail.name, cocktail_path(cocktail) %></h3>
         </div>
       <% end %>
