--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,25 +1,31 @@
 
 
 <% if @cocktail.ingredients.count == 0 %>
+<div class="show">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <h3>You cocktail does not have any recipe yet, add a dose to complete it !</h3>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+<div class="show">
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
-        <h3>You cocktail does not have any recipe yet, add a dose to complete it !</h3>
-      </div>
-    </div>
-  </div>
-<% end %>
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <div>
-        <% @cocktail.doses.each do |dose| %>
-          <p><%= dose.description %> of <%= dose.ingredient.name %></p>
-        <% end %>
-      </div>
-      <div>
-        <%= link_to "Include a new dose", new_cocktail_dose_path(@cocktail), {class: "btn btn-primary"}%>
+        <div>
+          <% @cocktail.doses.each do |dose| %>
+            <p><%= dose.description %> of <%= dose.ingredient.name %></p>
+          <% end %>
+        </div>
+        <div>
+          <%= link_to "Include a new dose", new_cocktail_dose_path(@cocktail), {class: "btn btn-success"}%>
+        </div>
+        <br>
+        <%= link_to "Back to the Index", cocktails_path, {class: "btn btn-primary"} %>
       </div>
     </div>
   </div>
