add delete function

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -6,9 +6,16 @@
 }
 
 .show {
-  paddint-top: 50px;
+  padding-top: 100px;
+  text-align: center;
 }
 
 .bg-white {
   background-color: white;
+
+}
+
+.title_article {
+  text-align: center;
+  padding: 20px;
 }
