--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <%= form_for(@cocktail) do |f| %>
+      <%= form_for(@cocktail, html: { multipart: true }) do |f| %>
         <% if f.object.errors.present? %>
           <ul>
             <% f.object.errors.full_messages.each do |msg| %>
@@ -17,9 +17,13 @@
           <%= f.text_field :name, class:"form-control"%>
         </div>
         <div class="form-group">
+          <%= f.label :picture %>
+          <%= f.file_field :picture %>
+        </div>
+        <div class="form-group">
           <%= f.submit "Create the cocktail", class:"btn btn-success" %>
         </div>
-       <% end %>
+      <% end %>
     </div>
   </div>
 </div>
