--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -31,7 +31,7 @@
           <br>
            <% @cocktail.doses.each do |dose| %>
             <ul class="list-unstyled list-inline title_article">
-                <li><%= dose.description %> of <%= dose.ingredient.name %> </li>
+                <li><%= dose.description %> <%= dose.ingredient.name %> </li>
                 <li> <%= link_to "Delete", dose_path(dose), class: "btn btn-danger", method: :delete, data: { confirm: "Are you sure?" } %> </li>
               <% end %>
             </ul>
